adding additional info to the html

--- a/index.html
+++ b/index.html
@@ -25,16 +25,48 @@
           30°c
         </div>
         <h2>Five days forecast</h2>
-        <p>Saturday</p>
-        <p>Sunday</p>
-        <p>Monday</p>
-        <p>Tuesday</p>
-        <p>Wednesday</p>
+        <p>
+          Saturday <br />
+          33°c <br />
+          ☀ <br />
+          Sunny <br />
+          Moist: 50%, Windspeed:8km/h
+        </p>
+        <p>
+          Sunday <br />
+          31°c <br />
+          ☁ <br />
+          cloudy <br />
+          Moist: 70%, Windspeed:4km/h
+        </p>
+        <p>
+          Monday <br />
+          231°c <br />
+          🌧 <br />
+          rainy <br />
+          Moist: 90%, Windspeed:5km/h
+        </p>
+        <p>
+          Tuesday <br />
+          20°c <br />
+          ⛅ <br />
+          broken clouds <br />
+          Moist: 60%, Windspeed:5km/h
+        </p>
+        <p>
+          Wednesday <br />
+          29°c <br />
+          ☀ <br />
+          Sunny <br />
+          Moist: 40%, Windspeed:9km/h
+        </p>
       </div>
       <footer>
         This project was coded by
         <a href="https://github.com/najmawahedi">Najma Wahedi</a> and is on
-        <a href="#">GitHub</a> and hosted on <a href="#">Netlify</a>
+        <a href="https://github.com/najmawahedi/najma-s-weather-app">GitHub</a>
+        and hosted on
+        <a href="https://myweatherprojectapp.netlify.app/">Netlify</a>
       </footer>
     </form>
   </body>
