--- a/index.html
+++ b/index.html
@@ -1,73 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather forecast</title>
   </head>
-  <body>
+  <body class="backimg">
     <h1>Weather Forecast</h1>
     <form>
       <div id="searchContainer">
-        <input type="text" placeholder="Search your city" , required />
-        <input type="submit" value="Search" />
+        <input
+          id="textcity"
+          type="text"
+          placeholder="Search your city"
+          required
+          autofocus
+        />
+        <button id="formsubmit" type="submit" value="search">Search</button>
       </div>
-      <div>
-        <h2>Daily forecast</h2>
-        <p>
-          <strong>Kabul</strong><br />
-          Monday, 24 May, 2024 <br />
-          Sunny <br />
-          Moist: 50%, Windspeed:4km/h
-        </p>
-        <div>
-          <div>⛅</div>
-          30°c
-        </div>
-        <h2>Five days forecast</h2>
-        <p>
-          Saturday <br />
-          33°c <br />
-          ☀ <br />
-          Sunny <br />
-          Moist: 50%, Windspeed:8km/h
-        </p>
-        <p>
-          Sunday <br />
-          31°c <br />
-          ☁ <br />
-          cloudy <br />
-          Moist: 70%, Windspeed:4km/h
-        </p>
-        <p>
-          Monday <br />
-          231°c <br />
-          🌧 <br />
-          rainy <br />
-          Moist: 90%, Windspeed:5km/h
-        </p>
-        <p>
-          Tuesday <br />
-          20°c <br />
-          ⛅ <br />
-          broken clouds <br />
-          Moist: 60%, Windspeed:5km/h
-        </p>
-        <p>
-          Wednesday <br />
-          29°c <br />
-          ☀ <br />
-          Sunny <br />
-          Moist: 40%, Windspeed:9km/h
-        </p>
-      </div>
-      <footer>
-        This project was coded by
-        <a href="https://github.com/najmawahedi">Najma Wahedi</a> and is on
-        <a href="https://github.com/najmawahedi/najma-s-weather-app">GitHub</a>
-        and hosted on
-        <a href="https://myweatherprojectapp.netlify.app/">Netlify</a>
-      </footer>
     </form>
+    <div id="bodyContainer">
+      <h2>Daily forecast</h2>
+      <div class="todayforecast">
+        <div class="thecity"><strong>Kabul</strong></div>
+        <div class="icon">☀</div>
+        <div>
+          50% <br />
+          Moist
+        </div>
+        <div>
+          Friday
+          <div>24 May, 2024</div>
+        </div>
+        <div>Sunny</div>
+        <div>
+          4km/h <br />
+          Windspeed
+        </div>
+      </div>
+      <hr />
+      <h2>Five days forecast</h2>
+      <div class="fivedays">
+        <div class="saturday">
+          <div><strong>Saturday </strong></div>
+          <div class="icone">☀</div>
+          <div>33°c</div>
+          <div>Sunny</div>
+          <div>Moist: 40%</div>
+          <div>Windspeed:9km/h</div>
+        </div>
+        <div class="sunday">
+          <div><strong>Sunday</strong></div>
+          <div class="icone">🌥</div>
+          <div>33°c</div>
+          <div>Sunny</div>
+          <div>Moist: 60%</div>
+          <div>Windspeed:3km/h</div>
+        </div>
+        <div class="monday">
+          <div><strong>Monday</strong></div>
+          <div class="icone">🌧</div>
+          <div>33°c</div>
+          <div>Sunny</div>
+          <div>Moist: 90%</div>
+          <div>Windspeed:3km/h</div>
+        </div>
+        <div class="tuesday">
+          <div><strong>Tuesday</strong></div>
+          <div class="icone">☁</div>
+          <div>33°c</div>
+          <div>Sunny</div>
+          <div>Moist: 80%</div>
+          <div>Windspeed:6km/h</div>
+        </div>
+        <div class="wednesay">
+          <div><strong>Wednesday</strong></div>
+          <div class="icone">☀</div>
+          <div>33°c</div>
+          <div>Sunny</div>
+          <div>Moist: 60%</div>
+          <div>Windspeed:8km/h</div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      This project was coded by
+      <a class="link" href="https://github.com/najmawahedi">Najma Wahedi</a> and
+      is on
+      <a class="link" href="https://github.com/najmawahedi/najma-s-weather-app"
+        >GitHub</a
+      >
+      and hosted on
+      <a class="link" href="https://myweatherprojectapp.netlify.app/"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
