final CSS attachments

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div>
           <div class="degree">
             <img src="src/thermometer (1).png" width="30px" alt="" />
-            <span id="spcdegree">26</span>°c
+            <span id="spcdegree">26</span>°<span class="cfirst">c</span>
           </div>
           <div class="moist">
             Humidity: <strong><span id="moist">50</span>%</strong>
@@ -64,12 +64,14 @@
           </div>
           <div class="high">
             <img src="src/hot (1).png" width="30px" alt="" />High:
-            <strong><span id="high"> 19.16</span>°c</strong>
+            <strong
+              ><span id="high"> 19.16</span>°<span class="c">c</span></strong
+            >
           </div>
           <div class="low">
             <img src="src/cold.png" width="30px" alt="" /> Low:
             <strong> <span id="low">27.95</span></strong
-            >°c
+            >°<span class="c">c</span>
           </div>
         </div>
       </div>
@@ -89,8 +91,10 @@
           </div>
           <div id="firstdaycondition">Broken clouds</div>
           <div>
-            <span id="firstdaytemphigh">26</span>°c <span> </span>
-            <span id="firstdaytemplow"> 23</span>°c
+            <span id="firstdaytemphigh">26</span>°<span class="c">c</span>
+            <span> </span> <span id="firstdaytemplow"> 23</span>°<span class="c"
+              >c</span
+            >
           </div>
 
           <div>Moist: <span id="firstdaymoist">40</span>%</div>
@@ -107,9 +111,9 @@
           </div>
           <div id="seconddaycondition">Light rain</div>
           <div>
-            <span id="seconddaytemphigh"> 26</span>°c <span> </span>
-            <span> <span id="seconddaytemplow"> 17</span></span
-            >°c
+            <span id="seconddaytemphigh"> 26</span>°<span class="c">c</span>
+            <span> </span> <span> <span id="seconddaytemplow"> 17</span></span
+            >°<span class="c">c</span>
           </div>
 
           <div>Moist: <span id="seconddaymoist"> 60</span>%</div>
@@ -126,8 +130,10 @@
           </div>
           <div id="thirddaycondition">Scattered clouds</div>
           <div>
-            <span id="thirdaytemphigh">29</span>°c <span> </span>
-            <span id="thirddaytemplow"> 18</span>°c
+            <span id="thirdaytemphigh">29</span>°<span class="c">c</span>
+            <span> </span> <span id="thirddaytemplow"> 18</span>°<span class="c"
+              >c</span
+            >
           </div>
 
           <div>Moist: <span id="thirddaymoist">90</span>%</div>
@@ -144,8 +150,10 @@
           </div>
           <div id="forthdaycondition">Clear sky</div>
           <div>
-            <span id="forthdaytemphigh">30</span>°c <span> </span>
-            <span id="forthdaytemplow"> 20</span>°c
+            <span id="forthdaytemphigh">30</span>°<span class="c">c</span>
+            <span> </span> <span id="forthdaytemplow"> 20</span>°<span class="c"
+              >c</span
+            >
           </div>
 
           <div>Moist: <span id="forthdaymoist">80</span>%</div>
@@ -162,8 +170,10 @@
           </div>
           <div id="fifthdaycondition">Clear sky</div>
           <div>
-            <span id="fifthdaytemphigh">33</span>°c <span> </span>
-            <span id="fifthdaytemplow"> 28</span>°c
+            <span id="fifthdaytemphigh">33</span>°<span class="c">c</span>
+            <span> </span> <span id="fifthdaytemplow"> 28</span>°<span class="c"
+              >c</span
+            >
           </div>
 
           <div>Moist: <span id="fifthdaymoist">60</span>%</div>
