completed the project

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
       This project was coded by
       <a class="link" href="https://github.com/najmawahedi">Najma Wahedi</a> and
       is on
-      <a class="link" href="https://github.com/najmawahedi/najma-s-weather-app"
+      <a
+        class="link"
+        href="https://github.com/najmawahedi/najma-s-weather-app.git"
         >GitHub</a
       >
       and hosted on
-      <a class="link" href="https://myweatherprojectapp.netlify.app/"
-        >Netlify</a
-      >
+      <a class="link" href="https://myweatherprojectapp.netlify.app">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
