--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             >
           </div>
 
-          <div>Moist: <span id="firstdaymoist">40</span>%</div>
+          <div>Humidity: <span id="firstdaymoist">40</span>%</div>
           <div>Windspeed: <span id="firstdaywindspeed">9</span>km/h</div>
         </div>
         <div class="secondday">
@@ -116,7 +116,7 @@
             >°<span class="c">c</span>
           </div>
 
-          <div>Moist: <span id="seconddaymoist"> 60</span>%</div>
+          <div>Humidity: <span id="seconddaymoist"> 60</span>%</div>
           <div>Windspeed: <span id="seconddaywindspeed"> 3</span>km/h</div>
         </div>
         <div class="thirdday">
@@ -136,7 +136,7 @@
             >
           </div>
 
-          <div>Moist: <span id="thirddaymoist">90</span>%</div>
+          <div>Humidity: <span id="thirddaymoist">90</span>%</div>
           <div>Windspeed: <span id="thirddaywindspeed">3</span>km/h</div>
         </div>
         <div class="forthday">
@@ -156,7 +156,7 @@
             >
           </div>
 
-          <div>Moist: <span id="forthdaymoist">80</span>%</div>
+          <div>Humidity: <span id="forthdaymoist">80</span>%</div>
           <div>Windspeed: <span id="forthdaywindspeed">6</span>km/h</div>
         </div>
         <div class="fifthday">
@@ -176,7 +176,7 @@
             >
           </div>
 
-          <div>Moist: <span id="fifthdaymoist">60</span>%</div>
+          <div>Humidity: <span id="fifthdaymoist">60</span>%</div>
           <div>Windspeed: <span id="fifthdaywindspeed">8</span>km/h</div>
         </div>
       </div>
